[gd_scene load_steps=53 format=3 uid="uid://brenpfo706mj7"]

[ext_resource type="Script" path="res://Scripts/Characters/Ants/Ant.gd" id="1_vf2pa"]
[ext_resource type="Script" path="res://Scripts/StateMachine/StateMachine.gd" id="2_4u641"]
[ext_resource type="Texture2D" uid="uid://nfg8ob62tqn3" path="res://Sprites (Images)/Character/Ant/Antmainworker.png" id="2_pxq32"]
[ext_resource type="PackedScene" uid="uid://p3luln66r7l" path="res://Scenes/Scenes/StateMachine/Ant States/Idle.tscn" id="3_01376"]
[ext_resource type="PackedScene" uid="uid://l74j1i2m154g" path="res://Scenes/Scenes/StateMachine/Ant States/Walk.tscn" id="5_051ba"]
[ext_resource type="FontFile" uid="uid://6spv7bhy8j5j" path="res://Font/monogram/ttf/monogram.ttf" id="7_17fy0"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0vjql"]
radius = 4.0
height = 8.0

[sub_resource type="AtlasTexture" id="AtlasTexture_6sivb"]
atlas = ExtResource("2_pxq32")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qnnhm"]
atlas = ExtResource("2_pxq32")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_msjlr"]
atlas = ExtResource("2_pxq32")
region = Rect2(384, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kk0cr"]
atlas = ExtResource("2_pxq32")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6wny3"]
atlas = ExtResource("2_pxq32")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pgy5c"]
atlas = ExtResource("2_pxq32")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v84vw"]
atlas = ExtResource("2_pxq32")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k5lf3"]
atlas = ExtResource("2_pxq32")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xwywb"]
atlas = ExtResource("2_pxq32")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v23gf"]
atlas = ExtResource("2_pxq32")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vm2lo"]
atlas = ExtResource("2_pxq32")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dygpx"]
atlas = ExtResource("2_pxq32")
region = Rect2(352, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_388bl"]
atlas = ExtResource("2_pxq32")
region = Rect2(384, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pcprt"]
atlas = ExtResource("2_pxq32")
region = Rect2(416, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ysxh"]
atlas = ExtResource("2_pxq32")
region = Rect2(448, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4bpj"]
atlas = ExtResource("2_pxq32")
region = Rect2(480, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w51jy"]
atlas = ExtResource("2_pxq32")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1tafn"]
atlas = ExtResource("2_pxq32")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c6kcn"]
atlas = ExtResource("2_pxq32")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pw24y"]
atlas = ExtResource("2_pxq32")
region = Rect2(224, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_b6r7a"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6sivb")
}],
"loop": true,
"name": &"idle_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qnnhm")
}],
"loop": true,
"name": &"idle_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_msjlr")
}],
"loop": true,
"name": &"idle_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kk0cr")
}],
"loop": true,
"name": &"idle_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6wny3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pgy5c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v84vw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k5lf3")
}],
"loop": true,
"name": &"walk_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwywb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v23gf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vm2lo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dygpx")
}],
"loop": true,
"name": &"walk_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_388bl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pcprt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ysxh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4bpj")
}],
"loop": true,
"name": &"walk_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w51jy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1tafn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c6kcn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pw24y")
}],
"loop": true,
"name": &"walk_up",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_cfc23"]
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["idle_down"]
}

[sub_resource type="Animation" id="Animation_o00gt"]
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["idle_left"]
}

[sub_resource type="Animation" id="Animation_gxr01"]
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["idle_right"]
}

[sub_resource type="Animation" id="Animation_luvhy"]
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["idle_up"]
}

[sub_resource type="Animation" id="Animation_bn716"]
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["walk_down"]
}

[sub_resource type="Animation" id="Animation_lrv1l"]
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["walk_left"]
}

[sub_resource type="Animation" id="Animation_slgoi"]
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["walk_right"]
}

[sub_resource type="Animation" id="Animation_gk0j5"]
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["walk_up"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5pj0f"]
_data = {
"idle_down": SubResource("Animation_cfc23"),
"idle_left": SubResource("Animation_o00gt"),
"idle_right": SubResource("Animation_gxr01"),
"idle_up": SubResource("Animation_luvhy"),
"walk_down": SubResource("Animation_bn716"),
"walk_left": SubResource("Animation_lrv1l"),
"walk_right": SubResource("Animation_slgoi"),
"walk_up": SubResource("Animation_gk0j5")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_d785b"]
animation = &"idle_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_1fse1"]
animation = &"idle_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ln0e3"]
animation = &"idle_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_2e170"]
animation = &"idle_right"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_hhlju"]
blend_point_0/node = SubResource("AnimationNodeAnimation_d785b")
blend_point_0/pos = Vector2(0, -1.1)
blend_point_1/node = SubResource("AnimationNodeAnimation_1fse1")
blend_point_1/pos = Vector2(0, 1.1)
blend_point_2/node = SubResource("AnimationNodeAnimation_ln0e3")
blend_point_2/pos = Vector2(-1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_2e170")
blend_point_3/pos = Vector2(1, 0)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_x4uow"]
animation = &"walk_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_0xupt"]
animation = &"walk_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_q4mw8"]
animation = &"walk_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_pjfjw"]
animation = &"walk_right"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_ygfwg"]
blend_point_0/node = SubResource("AnimationNodeAnimation_x4uow")
blend_point_0/pos = Vector2(0, 1.1)
blend_point_1/node = SubResource("AnimationNodeAnimation_0xupt")
blend_point_1/pos = Vector2(0, -1.1)
blend_point_2/node = SubResource("AnimationNodeAnimation_q4mw8")
blend_point_2/pos = Vector2(-1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_pjfjw")
blend_point_3/pos = Vector2(1, 0)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_r1bvj"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_30n1t"]
advance_mode = 2
advance_condition = &"walk"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_nd2xt"]
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_eyftl"]
states/idle/node = SubResource("AnimationNodeBlendSpace2D_hhlju")
states/idle/position = Vector2(338, 98)
states/walk/node = SubResource("AnimationNodeBlendSpace2D_ygfwg")
states/walk/position = Vector2(582, 98)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_r1bvj"), "idle", "walk", SubResource("AnimationNodeStateMachineTransition_30n1t"), "walk", "idle", SubResource("AnimationNodeStateMachineTransition_nd2xt")]
graph_offset = Vector2(23, 0)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_muta0"]
radius = 6.0
height = 12.0

[node name="Ant" type="CharacterBody2D" node_paths=PackedStringArray("anim_player", "timer") groups=["Ant"]]
texture_filter = 1
script = ExtResource("1_vf2pa")
anim_player = NodePath("AnimationPlayer")
timer = NodePath("Timer")
speed = 50.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 4)
shape = SubResource("CapsuleShape2D_0vjql")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_b6r7a")
animation = &"idle_down"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5pj0f")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
unique_name_in_owner = true
root_node = NodePath("%AnimationTree/..")
tree_root = SubResource("AnimationNodeStateMachine_eyftl")
anim_player = NodePath("../AnimationPlayer")
parameters/conditions/idle = true
parameters/conditions/walk = false
parameters/idle/blend_position = Vector2(0.00821352, 0.823985)
parameters/walk/blend_position = Vector2(0, 0)

[node name="AntStateMachine" type="Node2D" parent="." node_paths=PackedStringArray("init_state")]
script = ExtResource("2_4u641")
init_state = NodePath("Idle")

[node name="Idle" parent="AntStateMachine" instance=ExtResource("3_01376")]

[node name="Walk" parent="AntStateMachine" instance=ExtResource("5_051ba")]

[node name="Area2D" type="Area2D" parent="." groups=["Ant"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 4)
shape = SubResource("CapsuleShape2D_muta0")
debug_color = Color(0.661629, 0.508161, 0.21484, 0.42)

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(-13, 0)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Control"]
layout_mode = 0
offset_left = -36.0
offset_top = -26.0
offset_right = 37.0
offset_bottom = -3.0
pivot_offset = Vector2(36, 12)
theme_override_fonts/font = ExtResource("7_17fy0")
theme_override_font_sizes/font_size = 16
text = "too heavy"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" type="Timer" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
enabled = false
zoom = Vector2(3, 3)
editor_draw_screen = false

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
